Add PublicationFormViewModel and PublicationsController

--- a/FishingBlog/appsettings.json
+++ b/FishingBlog/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FishingBlog-3A735DCE-D5FF-487A-BB58-0B59B76E79FD;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=FishingBlog;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
